--- a/player.css
+++ b/player.css
@@ -41,13 +41,15 @@ body{
 #video-player{
     margin: 0 auto;
     width: 100%;
-    padding-top: 10%;
+    height: 460px;
 }
 
 .thumbnail-player{
     padding: 30px 0;
     width: 100%;
+    height: 300px;
     border:none;
+    border-bottom: 2px solid #ccc;
 }
 
 p,h3 {
